Added summary of advanced settings

--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -59,6 +59,11 @@
             android:text="@string/advanced_settings"
             app:icon="@drawable/gear" />
 
+        <TextView
+            android:id="@+id/advancedSettingsSummary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
