--- a/app/src/main/res/drawable/arrow_down_circle.xml
+++ b/app/src/main/res/drawable/arrow_down_circle.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="16"
     android:viewportHeight="16">
     <path
-        android:fillColor="?android:colorForeground"
+        android:fillColor="?attr/colorOnPrimarySurface"
         android:fillType="evenOdd"
         android:pathData="M1,8a7,7 0,1 0,14 0A7,7 0,0 0,1 8m15,0A8,8 0,1 1,0 8a8,8 0,0 1,16 0M8.5,4.5a0.5,0.5 0,0 0,-1 0v5.793L5.354,8.146a0.5,0.5 0,1 0,-0.708 0.708l3,3a0.5,0.5 0,0 0,0.708 0l3,-3a0.5,0.5 0,0 0,-0.708 -0.708L8.5,10.293z" />
 </vector>
