--- a/app/src/main/res/layout/reminder_table_column_header.xml
+++ b/app/src/main/res/layout/reminder_table_column_header.xml
@@ -3,13 +3,15 @@
     android:id="@+id/tableColumnHeaderContainer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp">
+    android:backgroundTint="?attr/colorPrimarySurface"
+    android:padding="2dp">
 
     <TextView
         android:id="@+id/tableColumnHeaderTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textColor="?attr/colorOnPrimarySurface" />
 
     <ImageButton
         android:id="@+id/tableColumnHeaderSortButton"
@@ -20,6 +22,5 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/sort"
         android:scaleType="fitXY"
-        android:src="@drawable/capsule"
         android:visibility="gone" />
 </LinearLayout>
