--- a/app/src/main/res/layout/reminder_table_cell.xml
+++ b/app/src/main/res/layout/reminder_table_cell.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cellContainer"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="2dp">
+    android:layout_height="24dp"
+    android:padding="2dp">
 
     <TextView
         android:id="@+id/tableCellTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
