--- a/app/src/main/res/layout/reminder_table_column_header.xml
+++ b/app/src/main/res/layout/reminder_table_column_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tableColumnHeaderContainer"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="22dp"
     android:backgroundTint="?attr/colorPrimarySurface"
     android:padding="2dp">
 
