--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -73,6 +73,9 @@
         <action
             android:id="@+id/action_fragmentMain_to_editMedicine"
             app:destination="@id/editMedicineFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_reminderTableFragment"
+            app:destination="@id/reminderTableFragment" />
     </fragment>
     <action
         android:id="@+id/action_global_preferencesFragment"
@@ -80,14 +83,10 @@
     <fragment
         android:id="@+id/reminderTableFragment"
         android:name="com.futsch1.medtimer.remindertable.ReminderTableFragment"
-        android:label="ReminderTableFragment" />
+        android:label="@string/reminders" />
     <fragment
         android:id="@+id/statisticsFragment"
         android:name="com.futsch1.medtimer.statistics.StatisticsFragment"
         android:label="fragment_statistics"
-        tools:layout="@layout/fragment_statistics">
-        <action
-            android:id="@+id/action_statisticsFragment_to_reminderTableFragment"
-            app:destination="@id/reminderTableFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_statistics" />
 </navigation>
