Fixed number of filter lines

--- a/app/src/main/res/layout/fragment_reminder_table.xml
+++ b/app/src/main/res/layout/fragment_reminder_table.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/filter"
+            android:maxLines="1"
             tools:ignore="TextContrastCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
