Overview can be set to show events 7 days ago

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -21,6 +21,7 @@
         <item>@string/twenty_four_hours</item>
         <item>@string/two_days</item>
         <item>@string/three_days</item>
+        <item>@string/one_week</item>
     </string-array>
     <string-array name="overview_events_values">
         <item>4</item>
@@ -28,6 +29,7 @@
         <item>24</item>
         <item>48</item>
         <item>72</item>
+        <item>168</item>
     </string-array>
     <string-array name="instructions_suggestions">
         <item>@string/no_instructions</item>
