--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -16,16 +16,31 @@
     <com.anychart.AnyChartView
         android:id="@+id/medicinesPerDayChart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
-
-    <com.anychart.AnyChartView
-        android:id="@+id/takenSkippedChart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_height="0dp"
+        android:layout_weight="2">
 
     </com.anychart.AnyChartView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <com.anychart.AnyChartView
+            android:id="@+id/takenSkippedChartTotal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <com.anychart.AnyChartView
+            android:id="@+id/takenSkippedChart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+        </com.anychart.AnyChartView>
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
