--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,31 +7,37 @@
             android:title="@string/tab_settings" />
     </group>
     <item
-        android:id="@+id/export"
+        android:id="@+id/event_data"
         android:icon="@drawable/floppy2"
-        android:title="@string/export">
+        android:title="@string/event_data">
         <menu>
+            <item
+                android:id="@+id/export_pdf"
+                android:title="@string/pdf" />
             <item
                 android:id="@+id/export_csv"
                 android:title="@string/csv" />
             <item
-                android:id="@+id/export_pdf"
-                android:title="@string/pdf" />
+                android:id="@+id/backup_events"
+                android:title="@string/backup_failed" />
+            <item
+                android:id="@+id/restore_events"
+                android:title="@string/restore_events" />
+            <item
+                android:id="@+id/clear_events"
+                android:icon="@drawable/x_circle"
+                android:title="@string/clear_events" />
         </menu>
     </item>
     <item
-        android:id="@+id/clear_events"
-        android:icon="@drawable/x_circle"
-        android:title="@string/clear_events" />
-    <item
-        android:id="@+id/backup"
-        android:title="@string/backup_medicine">
+        android:id="@+id/medicine_data"
+        android:title="@string/medicine_data">
         <menu>
             <item
-                android:id="@+id/perform_backup"
+                android:id="@+id/medicine_backup"
                 android:title="@string/create" />
             <item
-                android:id="@+id/restore_backup"
+                android:id="@+id/restore_medicine_backup"
                 android:title="@string/restore" />
         </menu>
     </item>
