--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -31,13 +31,11 @@
             android:entries="@array/analysis_days" />
     </LinearLayout>
 
-    <com.anychart.AnyChartView
+    <com.androidplot.xy.XYPlot
         android:id="@+id/medicinesPerDayChart"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2">
-
-    </com.anychart.AnyChartView>
+        android:layout_weight="2" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,26 +43,19 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <com.anychart.AnyChartView
+        <com.androidplot.pie.PieChart
             android:id="@+id/takenSkippedChartTotal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             tools:ignore="NestedWeights" />
 
-        <com.anychart.AnyChartView
+        <com.androidplot.pie.PieChart
             android:id="@+id/takenSkippedChart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1" />
 
-        </com.anychart.AnyChartView>
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
