--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -37,6 +37,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
+        ap:gridInsetLeft="15dp"
+        ap:gridInsetRight="5dp"
         ap:lineLabels="left|bottom"
         ap:marginTop="10dp" />
 
