--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -37,8 +37,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        ap:gridInsetLeft="15dp"
-        ap:gridInsetRight="5dp"
+        ap:graphPaddingBottom="15dp"
+        ap:graphPaddingLeft="20dp"
+        ap:graphPaddingRight="5dp"
+        ap:graphPaddingTop="20dp"
+        ap:gridClippingEnabled="false"
+        ap:lineLabelInsetBottom="-13dp"
+        ap:lineLabelInsetLeft="-13dp"
         ap:lineLabels="left|bottom"
         ap:marginTop="10dp" />
 
