--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -37,11 +37,27 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
+        ap:graphAnchor="left_top"
+        ap:graphHeight="50dp"
+        ap:graphHeightMode="fill"
+        ap:graphHorizontalPosition="0"
+        ap:graphHorizontalPositioning="absolute_from_left"
         ap:graphPaddingBottom="15dp"
         ap:graphPaddingLeft="20dp"
         ap:graphPaddingRight="5dp"
         ap:graphPaddingTop="20dp"
+        ap:graphVerticalPosition="0"
+        ap:graphVerticalPositioning="absolute_from_top"
         ap:gridClippingEnabled="false"
+        ap:legendAnchor="left_bottom"
+        ap:legendHeight="50dp"
+        ap:legendHeightMode="absolute"
+        ap:legendHorizontalPosition="0"
+        ap:legendHorizontalPositioning="absolute_from_left"
+        ap:legendVerticalPosition="0"
+        ap:legendVerticalPositioning="absolute_from_bottom"
+        ap:legendWidth="1.0"
+        ap:legendWidthMode="relative"
         ap:lineLabelInsetBottom="-13dp"
         ap:lineLabelInsetLeft="-13dp"
         ap:lineLabels="left|bottom"
