--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -56,8 +56,9 @@
         ap:legendHorizontalPositioning="absolute_from_left"
         ap:legendVerticalPosition="0"
         ap:legendVerticalPositioning="absolute_from_bottom"
-        ap:legendWidth="1.0"
-        ap:legendWidthMode="relative"
+        ap:legendVisible="true"
+        ap:legendWidth="10dp"
+        ap:legendWidthMode="fill"
         ap:lineLabelInsetBottom="-13dp"
         ap:lineLabelInsetLeft="-13dp"
         ap:lineLabels="left|bottom"
