--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -19,10 +19,10 @@
                 android:title="@string/csv" />
             <item
                 android:id="@+id/backup_events"
-                android:title="@string/backup_failed" />
+                android:title="@string/backup" />
             <item
                 android:id="@+id/restore_events"
-                android:title="@string/restore_events" />
+                android:title="@string/restore" />
             <item
                 android:id="@+id/clear_events"
                 android:icon="@drawable/x_circle"
@@ -35,7 +35,7 @@
         <menu>
             <item
                 android:id="@+id/medicine_backup"
-                android:title="@string/create" />
+                android:title="@string/backup" />
             <item
                 android:id="@+id/restore_medicine_backup"
                 android:title="@string/restore" />
