--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -19,7 +19,11 @@
         android:id="@+id/overviewFragment"
         android:name="com.futsch1.medtimer.overview.OverviewFragment"
         android:label="@string/tab_overview"
-        tools:layout="@layout/fragment_overview" />
+        tools:layout="@layout/fragment_overview">
+        <action
+            android:id="@+id/action_overviewFragment_to_editEventFragment"
+            app:destination="@id/editEventFragment" />
+    </fragment>
     <fragment
         android:id="@+id/preferencesFragment"
         android:name="com.futsch1.medtimer.PreferencesFragment"
@@ -86,5 +90,20 @@
         <action
             android:id="@+id/action_statisticsFragment_to_reminderTableFragment"
             app:destination="@id/reminderTableFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/editEventFragment"
+        android:name="com.futsch1.medtimer.overview.EditEventFragment"
+        android:label="@string/edit_event"
+        tools:layout="@layout/fragment_edit_event">
+        <argument
+            android:name="eventId"
+            app:argType="integer" />
+        <argument
+            android:name="eventName"
+            app:argType="string" />
+        <argument
+            android:name="eventTime"
+            app:argType="long" />
     </fragment>
 </navigation>
