--- a/app/src/main/res/layout/fragment_edit_event.xml
+++ b/app/src/main/res/layout/fragment_edit_event.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:hint="@string/amount">
+        android:hint="@string/dosage">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editEventAmount"
