--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,15 +1,14 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.MedTimer" parent="Theme.Material3.DynamicColors.Dark">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-    </style>
+    <style name="Theme.MedTimer" parent="Theme.Material3.DynamicColors.Dark" />
 
-    <style name="Base.Theme.MedTimer2" parent="Theme.Material3.Dark">
+    <style name="Theme.MedTimer2" parent="Theme.Material3.Dark">
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:statusBarColor">@android:color/background_dark</item>
         <item name="colorSurfaceContainer">@android:color/background_dark</item>
         <item name="elevationOverlayColor">@android:color/background_dark</item>
     </style>
+
+    <style name="Theme.AppIntro" parent="Theme.AppCompat.DayNight.NoActionBar" />
 
 </resources>
