--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,11 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.MedTimer" parent="Theme.Material3.DynamicColors.Light">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+    <style name="Theme.MedTimer" parent="Theme.Material3.DynamicColors.Light" />
 
-    <style name="Base.Theme.MedTimer2" parent="Theme.Material3.Light">
+    <style name="Theme.MedTimer2" parent="Theme.Material3.Light">
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="Theme.MedTimer" parent="Base.Theme.MedTimer" />
-
-    <style name="Theme.MedTimer2" parent="Base.Theme.MedTimer2" />
+    <style name="Theme.AppIntro" parent="Theme.AppCompat.NoActionBar" />
 </resources>
